# vership

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-03-28-go-project-type-design.md
src/: artifacts.rs  changelog.rs  checks.rs  cli.rs  config.rs  error.rs  git.rs  hooks.rs  lib.rs  main.rs  output.rs  planning.rs  release.rs  schema.rs  version.rs  version_files.rs
src/project/: cargo_helpers.rs  detect.rs  go.rs  mod.rs  node.rs  python.rs  rust.rs  rust_maturin.rs
tests/: artifacts_test.rs  changelog_test.rs  config_test.rs  detect_test.rs  git_test.rs  go_test.rs  node_test.rs  python_test.rs  version_files_test.rs  version_test.rs
